# secure-crypto

./: .gitignore  pyproject.toml
src/secure_crypto/: __init__.py
src/secure_crypto_rust/: Cargo.toml  z9. Project Structure.md
src/secure_crypto_rust/core/: Cargo.toml
src/secure_crypto_rust/core/src/: constants.rs  lib.rs  types.rs  utils.rs
src/secure_crypto_rust/core/src/compression/: compression.md  constants.rs  mod.rs  registry.rs  stream.rs  types.rs
src/secure_crypto_rust/core/src/compression/codecs/: auto.rs  deflate.rs  lz4.rs  mod.rs  zstd.rs
src/secure_crypto_rust/core/src/crypto/: aad.rs  aead.rs  crypto.md  digest.md  digest.rs  kdf.rs  nonce.rs  types.rs
src/secure_crypto_rust/core/src/headers/: decode.rs  encode.rs  headers.md  mod.rs  types.rs
src/secure_crypto_rust/core/src/recovery/: checkpoint.rs  persist.rs  resume.rs
src/secure_crypto_rust/core/src/stream_v2/: compression_pipeline.rs  core.rs  io.md  io.rs  mod.rs  parallelism.md  parallelism.rs  pipeline.md  pipeline.rs  stream_v2.md  z11. Project Structure.md
src/secure_crypto_rust/core/src/stream_v2/compression_worker/: compression_worker.md  types.rs  worker.rs
src/secure_crypto_rust/core/src/stream_v2/frame_worker/: decrypt.rs  encrypt.rs  frame_worker.md  types.rs
src/secure_crypto_rust/core/src/stream_v2/framing/: decode.rs  encode.rs  framing.md  mod.rs  types.rs
src/secure_crypto_rust/core/src/stream_v2/segment_worker/: decrypt.md  decrypt.rs  encrypt.md  encrypt.rs  mod.rs  segment_worker.md  segment_worker_v2.md  types.rs
src/secure_crypto_rust/core/src/stream_v2/segmenting/: decode.rs  encode.rs  segmenting.md  types.rs
src/secure_crypto_rust/core/src/telemetry/: counters.rs  snapshot.rs  telemetry.md  timers.rs
src/secure_crypto_rust/core/tests/: test_compression_gpu.rs  test_core.rs  test_digest.rs  test_digest_frame.rs  test_frame_worker.rs  test_framing.rs  test_gpu_worker.rs  test_header.rs  test_header_1.rs  test_kdf.rs  test_log.rs  test_pipeline.rs  test_scheduler.rs  test_segment_worker.rs  test_segment_worker_counters.rs  test_telemetry.rs  test_telemetry_dec.rs  test_telemetry_enc.rs  test_telemetry_pipeline_dec.rs  test_telemetry_pipeline_enc.rs
src/secure_crypto_rust/python/: Cargo.toml
src/secure_crypto_rust/python/src/: lib.rs
src/secure_crypto_rust/python/src/ffi/: mod.rs
