[project]
name = "secure-crypto"
version = "0.1.0"
description = "Secure crypto"
readme = "README.md"
authors = [
    { name = "Rejwanul Islam", email = "irejwanul@live.com" }
]
requires-python = ">=3.12.12"
dependencies = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"
