# 1️⃣ Workspace Cargo.toml

# 📍 `src/secure_crypto_rust/Cargo.toml`

# This is the **orchestrator only**.
# No dependencies here.

# ---------------------------------------------------------------------------
# Workspace root
# ---------------------------------------------------------------------------
[workspace]
resolver = "2"

members = [
    "core",
    "python",
]

# ---------------------------------------------------------------------------
# Shared workspace dependency versions (optional but recommended)
# This prevents version skew between crates.
# ---------------------------------------------------------------------------
[workspace.dependencies]
# Crypto
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
blake3 = "1.8"
hkdf = "0.12"
sha2 = "0.10"

# Compression
lz4 = "1.24"
lz4_flex = "0.12"
zstd = "0.13"
zstd-safe = "7.2"
flate2 = "1.0"

# Utilities
byteorder = "1.5"
crc32fast = "1.3"
hex = "0.4"
num_enum = "0.7"
num_cpus = "1.17.0"
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0.1"

# Concurrency (core-safe)
crossbeam = "0.8.4"

# ✅ **Why this matters**

# * One place to bump versions
# * Faster CI
# * No accidental mismatches between core & python
