# 1️⃣ Workspace Cargo.toml

# 📍 `src/secure_crypto_rust/Cargo.toml`

# This is the **orchestrator only**.
# No dependencies here.

# ---------------------------------------------------------------------------
# Workspace root
# ---------------------------------------------------------------------------
[workspace]
resolver = "2"

members = [
    "core",
    "python",
]

# ---------------------------------------------------------------------------
# Shared workspace dependency versions (optional but recommended)
# This prevents version skew between crates.
# ---------------------------------------------------------------------------
[workspace.dependencies]
# Crypto
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
hkdf = "0.13.0-rc.3"
blake3 = "1.8.3"
sha2 = "0.11.0-rc.3"
sha3 = "0.11.0-rc.3"
digest = "0.11.0-rc.5"

# Compression
lz4 = "1.24"
lz4_flex = "0.12"
zstd = "0.13"
zstd-safe = "7.2"
flate2 = "1.0"
futures = "0.3.31"
bytemuck = "1.24.0"
futures-intrusive = "0.5.0"

# Utilities
bitflags = "2.10.0"
byteorder = "1.5"
bytes = "1.11.0"
chrono = "0.4.43"
crc32fast = "1.3"
hex = "0.4"
num_enum = "0.7"
num_cpus = "1.17.0"
ocl = "0.19.7"
opencl3 = "0.12.1"
cl3 = "0.13.1"
pollster = "0.4.0"
wgpu = "28.0.0"
sysinfo = "0.37.2"
base64 = "0.22.1"
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0.1", features = ["serde"] }

# Concurrency (core-safe)
crossbeam = "0.8.4"

# 📦 Property‑Based Tests
# Add this to the `Cargo.toml` (dev‑dependencies):
proptest = "1.5"

# ✅ **Why this matters**

# * One place to bump versions
# * Faster CI
# * No accidental mismatches between core & python
